-- PostgreSQL schema for the vehicle marketplace ERD.
-- Apply this before seed.sql and categories.sql.

CREATE TYPE listing_status AS ENUM ('available', 'pending', 'sold', 'removed');
CREATE TYPE listing_condition AS ENUM ('new', 'used');
CREATE TYPE listing_transmission AS ENUM ('automatic', 'manual', 'cvt', 'semi_automatic', 'single_speed');
CREATE TYPE listing_fuel_type AS ENUM ('petrol', 'diesel', 'hybrid', 'plug_in_hybrid', 'electric', 'cng', 'lpg');

CREATE TABLE makes (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name         VARCHAR(100) NOT NULL UNIQUE
);

CREATE TABLE models (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    make_id      BIGINT NOT NULL REFERENCES makes(id) ON DELETE RESTRICT,
    name         VARCHAR(100) NOT NULL,
    UNIQUE (make_id, name)
);

CREATE TABLE categories (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    parent_id    BIGINT REFERENCES categories(id) ON DELETE RESTRICT,
    name         VARCHAR(100) NOT NULL,
    slug         VARCHAR(120) NOT NULL UNIQUE,
    sort_order   INTEGER NOT NULL DEFAULT 0 CHECK (sort_order >= 0),
    is_active    BOOLEAN NOT NULL DEFAULT TRUE,
    CHECK (parent_id IS NULL OR parent_id <> id)
);
CREATE INDEX categories_parent_sort_idx ON categories (parent_id, sort_order, id);

CREATE TABLE category_attributes (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    category_id    BIGINT NOT NULL REFERENCES categories(id) ON DELETE CASCADE,
    key            VARCHAR(100) NOT NULL,
    label          VARCHAR(150) NOT NULL,
    type           VARCHAR(20) NOT NULL CHECK (type IN ('enum', 'range', 'boolean')),
    unit           VARCHAR(40),
    is_filterable  BOOLEAN NOT NULL DEFAULT TRUE,
    is_required    BOOLEAN NOT NULL DEFAULT FALSE,
    sort_order     INTEGER NOT NULL DEFAULT 0 CHECK (sort_order >= 0),
    UNIQUE (category_id, key),
    UNIQUE (id, category_id)
);
CREATE INDEX category_attributes_category_idx
    ON category_attributes (category_id, is_filterable, sort_order);

CREATE TABLE attribute_options (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    attribute_id   BIGINT NOT NULL REFERENCES category_attributes(id) ON DELETE CASCADE,
    value          VARCHAR(150) NOT NULL,
    label          VARCHAR(150) NOT NULL,
    sort_order     INTEGER NOT NULL DEFAULT 0 CHECK (sort_order >= 0),
    UNIQUE (attribute_id, value)
);
CREATE INDEX attribute_options_order_idx ON attribute_options (attribute_id, sort_order, id);

CREATE TABLE listings (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    category_id    BIGINT NOT NULL REFERENCES categories(id) ON DELETE RESTRICT,
    model_id       BIGINT NOT NULL,
    year           SMALLINT NOT NULL CHECK (year BETWEEN 1886 AND 2200),
    mileage        INTEGER NOT NULL CHECK (mileage >= 0),
    price          NUMERIC(14, 2) NOT NULL CHECK (price >= 0),
    condition      listing_condition NOT NULL,
    transmission   listing_transmission NOT NULL,
    fuel_type      listing_fuel_type NOT NULL,
    color          VARCHAR(50) NOT NULL,
    city           VARCHAR(100) NOT NULL,
    region         VARCHAR(100) NOT NULL,
    status         listing_status NOT NULL DEFAULT 'available',
    title          VARCHAR(200) NOT NULL,
    description    TEXT NOT NULL DEFAULT '',
    created_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at     TIMESTAMPTZ,
    FOREIGN KEY (model_id) REFERENCES models(id) ON DELETE RESTRICT
);
CREATE INDEX listings_category_status_idx ON listings (category_id, status, created_at DESC);
CREATE INDEX listings_model_idx ON listings (model_id);
CREATE INDEX listings_price_idx ON listings (price);
CREATE INDEX listings_year_idx ON listings (year);
CREATE INDEX listings_location_idx ON listings (region, city);

CREATE TABLE listing_images (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    listing_id     BIGINT NOT NULL REFERENCES listings(id) ON DELETE CASCADE,
    url            TEXT NOT NULL,
    position       INTEGER NOT NULL DEFAULT 0 CHECK (position >= 0),
    is_primary     BOOLEAN NOT NULL DEFAULT FALSE,
    UNIQUE (listing_id, position)
);
CREATE INDEX listing_images_listing_idx ON listing_images (listing_id, position);
CREATE UNIQUE INDEX listing_images_one_primary_idx
    ON listing_images (listing_id) WHERE is_primary = TRUE;

CREATE TABLE listing_attribute_values (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    listing_id     BIGINT NOT NULL REFERENCES listings(id) ON DELETE CASCADE,
    attribute_id   BIGINT NOT NULL REFERENCES category_attributes(id) ON DELETE RESTRICT,
    value_text     VARCHAR(500),
    value_number   NUMERIC(14, 3),
    value_boolean  BOOLEAN,
    UNIQUE (listing_id, attribute_id),
    CHECK (num_nonnulls(value_text, value_number, value_boolean) = 1)
);
CREATE INDEX listing_attribute_text_idx
    ON listing_attribute_values (attribute_id, value_text) WHERE value_text IS NOT NULL;
CREATE INDEX listing_attribute_number_idx
    ON listing_attribute_values (attribute_id, value_number) WHERE value_number IS NOT NULL;
CREATE INDEX listing_attribute_boolean_idx
    ON listing_attribute_values (attribute_id, value_boolean) WHERE value_boolean IS NOT NULL;
