// Vehicle Marketplace schema. Import this file at https://dbdiagram.io

Enum listing_condition {
  new
  used
}

Enum listing_transmission {
  automatic
  manual
  cvt
  semi_automatic
  single_speed
}

Enum listing_fuel_type {
  petrol
  diesel
  hybrid
  plug_in_hybrid
  electric
  cng
  lpg
}

Enum listing_status {
  available
  pending
  sold
  removed
}

Table categories {
  id bigint [pk, increment]
  parent_id bigint [null, ref: > categories.id]
  name varchar [not null]
  slug varchar [not null, unique]
  sort_order integer [not null, default: 0]
  is_active boolean [not null, default: true]

  indexes {
    (parent_id, sort_order, id) [name: 'categories_parent_sort_idx']
  }
}

Table category_attributes {
  id bigint [pk, increment]
  category_id bigint [not null, ref: > categories.id]
  key varchar [not null]
  label varchar [not null]
  type varchar [not null, note: 'CHECK: enum | range | boolean']
  unit varchar [null]
  is_filterable boolean [not null, default: true]
  is_required boolean [not null, default: false]
  sort_order integer [not null, default: 0]

  indexes {
    (category_id, key) [unique, name: 'category_attributes_category_id_key_key']
    (id, category_id) [unique, name: 'category_attributes_id_category_id_key']
    (category_id, is_filterable, sort_order) [name: 'category_attributes_category_idx']
  }
}

Table attribute_options {
  id bigint [pk, increment]
  attribute_id bigint [not null, ref: > category_attributes.id]
  value varchar [not null]
  label varchar [not null]
  sort_order integer [not null, default: 0]

  indexes {
    (attribute_id, value) [unique, name: 'attribute_options_attribute_id_value_key']
    (attribute_id, sort_order, id) [name: 'attribute_options_order_idx']
  }
}

Table makes {
  id bigint [pk, increment]
  name varchar [not null, unique]
}

Table models {
  id bigint [pk, increment]
  make_id bigint [not null, ref: > makes.id]
  name varchar [not null]

  indexes {
    (make_id, name) [unique, name: 'models_make_id_name_key']
  }
}

Table listings {
  id bigint [pk, increment]
  category_id bigint [not null, ref: > categories.id]
  model_id bigint [not null, ref: > models.id]
  year smallint [not null]
  mileage integer [not null]
  price numeric [not null]
  condition listing_condition [not null]
  transmission listing_transmission [not null]
  fuel_type listing_fuel_type [not null]
  color varchar [not null]
  city varchar [not null]
  region varchar [not null]
  status listing_status [not null, default: 'available']
  title varchar [not null]
  description text [not null, default: '']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz [null]
  search_vector tsvector [note: 'Generated stored vector from title, description, city, and region; added by src/database/search.sql']

  indexes {
    (category_id, status, created_at) [name: 'listings_category_status_idx']
    (region, city) [name: 'listings_location_idx']
    (model_id) [name: 'listings_model_idx']
    (price) [name: 'listings_price_idx']
    (year) [name: 'listings_year_idx']
    (fuel_type, year, price) [name: 'listings_search_filters_idx', note: 'Partial: status = available AND deleted_at IS NULL']
    (search_vector) [name: 'listings_search_vector_gin_idx', type: gin]
  }
}

Table listing_images {
  id bigint [pk, increment]
  listing_id bigint [not null, ref: > listings.id]
  url text [not null]
  position integer [not null, default: 0]
  is_primary boolean [not null, default: false]

  indexes {
    (listing_id, position) [unique, name: 'listing_images_listing_id_position_key']
    (listing_id, position) [name: 'listing_images_listing_idx']
    (listing_id) [unique, name: 'listing_images_one_primary_idx', note: 'Partial: is_primary = true']
  }
}

Table listing_attribute_values {
  id bigint [pk, increment]
  listing_id bigint [not null, ref: > listings.id]
  attribute_id bigint [not null, ref: > category_attributes.id]
  value_text varchar [null]
  value_number numeric [null]
  value_boolean boolean [null]

  indexes {
    (listing_id, attribute_id) [unique, name: 'listing_attribute_values_listing_id_attribute_id_key']
    (attribute_id, value_text) [name: 'listing_attribute_text_idx', note: 'Partial: value_text IS NOT NULL']
    (attribute_id, value_number) [name: 'listing_attribute_number_idx', note: 'Partial: value_number IS NOT NULL']
    (attribute_id, value_boolean) [name: 'listing_attribute_boolean_idx', note: 'Partial: value_boolean IS NOT NULL']
  }
}

// On-delete behavior: category parents/listings and model references RESTRICT;
// category attributes/options and listing child rows CASCADE where defined.
